simplest way to make it

--- a/config/locales/topics.zh-TW.yml
+++ b/config/locales/topics.zh-TW.yml
@@ -17,6 +17,8 @@
       recent: "最新创建"
       popular: "优质帖子"
       no_reply: "无人问津"
+      week_popular: "本週熱門"
+      diary_popular: "今日熱門"
     create_topic_success: "話題新增成功"
     delete_topic_success: "話題刪除成功"
     update_topic_success: "話題修改成功。"
